--- a/README.org
+++ b/README.org
@@ -1,6 +1,5 @@
 #+begin_src python :dir src :results drawer :exports results
-import endoexport.export as E
-return E.make_parser().prog
+import endoexport.export as E; return E.make_parser().prog
 #+end_src
 
 #+RESULTS:
@@ -8,17 +7,16 @@ return E.make_parser().prog
 Tool to export your personal Endomondo data
 :end:
 
-# TODO add pip3 git+https instructions?? wonder if it clones recursively
 * Setting up
-1. Clone *recursively*: =git clone --recursive https://github.com/karlicoss/endoexport=
-2. =pip3 install --user -e .=
-3. Run =./export.py --login= to get your token (you only need to do it once)
+1. The easiest way is =pip3 install --user git+https://github.com/karlicoss/endoexport=.
+
+   Alternatively, use =git clone --recursive=, or =git pull && git submodules update --init=. After that, you can use =pip3 install --editable=.
+2. Run =./export.py --login= to get your token (you only need to do it once)
 
 * Exporting
 
 #+begin_src python :dir src :results drawer :exports results
-import endoexport.export as E
-return E.make_parser().epilog
+import endoexport.export as E; return E.make_parser().epilog
 #+end_src
 
 #+RESULTS:
@@ -35,13 +33,13 @@ Usage:
 
 After that, use:
 
-: ./export.py --secrets /path/to/secrets.py
+: python3 -m endoexport.export --secrets /path/to/secrets.py
 
 That way you type less and have control over where you keep your plaintext secrets.
 
 *Alternatively*, you can pass parameters directly, e.g.
 
-: ./export.py --email <email> --token <token>
+: python3 -m endoexport.export --email <email> --token <token>
 
 However, this is verbose and prone to leaking your keys/tokens/passwords in shell history.
 
@@ -53,4 +51,3 @@ I *highly* recommend checking exported files at least once just to make sure the
 
 # TODO include dal section
 
-# FIXME ./export.py is no longer correct way...
